recursion.cons.butnlast.ButNlast.scala.error
Erreur de compilation :
ButNlast:4: error: ')' expected but 'return' found.
    if(c == 0 return Nil; 
              ^